--- a/HP_terra_test.Rmd
+++ b/HP_terra_test.Rmd
@@ -14,3 +14,17 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 hp_data <- read_csv("harry_potter_aggression_full.csv")
 ```
+2. Basic wrangling and make a graph of Harry Potter vs Drao Malfoy aggression.
+```{r}
+hp_graph <- hp_data %>% 
+  filter(Name == "Harry" | Name == "Draco Malfoy") %>% 
+  select(Name, book, agg.per.mention) %>% 
+  ggplot(aes(x = book, y = agg.per.mention)) + 
+  geom_col(aes(fill = Name), position = "dodge")+ 
+  coord_flip()+
+  theme_bw()
+
+hp_graph
+  
+
+```
